# tbd-usb-msc

./: CMakeLists.txt  README.md  benchmark_copy.sh  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  custom_sdmmc_cmd.c  idf_component.yml  ota_c6_sdcard.c  ota_c6_sdcard.h  spi_api.c  spi_api.h  tusb_msc_main.c
